test/corpus/control_flow.txt
===
SET variable
===

SET vMyVar = 'Hello';

---

(source_file
  (identifier)
  (identifier)
  (comparison_operator)
  (single_quoted_string))

===
Function call
===

Sum(Amount);

---

(source_file
  (function_call
    name: (identifier)
    (identifier)))

===
Nested function call
===

Num(Sum(Amount), '#,##0');

---

(source_file
  (function_call
    name: (identifier)
    (function_call
      name: (identifier)
      (identifier))
    (single_quoted_string)))
